# how-i-engineer

./: .gitignore  AGENTS.md  Makefile  README.md
approvals/: README.md  how-i-engineer-omp.release.json
automations/_template/: README.md
automations/day-001-messy-notes-to-action-draft/: .env.example  IDEA.md  Makefile  README.md  VERIFY.md  pyproject.toml  web_config.json
automations/day-002-recall-radar/: .env.example  IDEA.md  Makefile  README.md  VERIFY.md  pyproject.toml  web_config.json
automations/day-002-recall-radar/data/: sample_alerts.json  sample_input.txt  sample_inventory.csv
automations/day-002-recall-radar/day_002_recall_radar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
automations/day-002-recall-radar/output/: alert_cache.json  live_recall_matches.csv  live_recall_report.md  sample_recall_matches.csv  sample_recall_report.md
automations/day-002-recall-radar/scripts/: run.py
automations/day-002-recall-radar/tests/: test_smoke.py
codex/daily-automation/: CURATED-IDEA-QUEUE.md  IDEA-FILTER.md  LOAD-FIRST.md  LOCAL-WEB-SHELL.md  POSTING-RULES.md  PRINCIPLES.md  PROMPT-TEMPLATES.md  PUBLIC-README.md  (+4 more)
docs/: architecture.md  how-i-engineer-omp.md  proof-lanes.md  safety-and-ownership.md
examples/: task-contract.md  teachclaw.omp.yml
harness/: README.md  lane.config.json
scripts/: check_approval.py  check_public_repo.py  draft_social_post.py  export_public_daily_automation_repo.py  local_web_shell.py  new_daily_automation.py  public_release_check.py  release_packet.py  run_daily_automation_pipeline.py  verify_daily_automation.py
(+28 files in other folders)
