[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "day_002_recall_radar"
version = "0.1.0"
description = "Daily AI automation: Recall Radar"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "httpx>=0.27",
    "langgraph>=0.2",
    "pydantic>=2.7",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "respx>=0.21"]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
